...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/lat_et"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lon_et"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_et" />

    <EditText
        android:id="@+id/height_et"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lon_et" />
...
